Make Airpalne Tab, Ticket Tab

--- a/Airlines/Airlines.Client/Airlines.Client.csproj
+++ b/Airlines/Airlines.Client/Airlines.Client.csproj
@@ -53,6 +53,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Airlines.Server\Airlines.Server.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
