--- a/TaxiDepo.Server/TaxiDepo.Server.csproj
+++ b/TaxiDepo.Server/TaxiDepo.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -46,5 +46,6 @@
   <ItemGroup>
     <Folder Include="Dto\" />
     <Folder Include="Controllers\" />
+    <Folder Include="Config\" />
   </ItemGroup>
 </Project>
