--- a/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
+++ b/MusicMarketApp/MusicMarketplace/MusicMarketplace.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
