--- a/RentalService.Client/RentalService.Client.csproj
+++ b/RentalService.Client/RentalService.Client.csproj
@@ -17,9 +17,9 @@
         <AvaloniaResource Include="Assets\**" />
     </ItemGroup>
     
-    <ItemGroup>
+<!--    <ItemGroup>
         <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="RentalService.Client" ClassName="ApiClient" />
-    </ItemGroup>
+    </ItemGroup>-->
     
     
     <ItemGroup>
@@ -35,15 +35,11 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.19" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.19" />
-        <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="8.0.0-preview.3.23177.8">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0-preview.3.23174.8" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0-preview.3.23174.8" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0-preview.3.23174.8" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0-preview.3.23174.8" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-preview.3.23174.8" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
         <PackageReference Include="Microsoft.VisualStudio.Designer.Interfaces" Version="17.5.33428.366" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NSwag.ApiDescription.Client" Version="13.19.0">
@@ -59,7 +55,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\RentalService.Server\RentalService.Server.csproj" />
+        <None Update="appsettings.json" ClassName="ApiClient">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="swagger.json" ClassName="ApiClient" />
     </ItemGroup>
     
 </Project>
