--- a/.github/workflows/GAForTransportMgmt.yml
+++ b/.github/workflows/GAForTransportMgmt.yml
@@ -2,11 +2,9 @@ name: GAForTransportMgmt
 on: 
   workflow_dispatch:
   push:
-    branches: 
-      -main
+    branches: [ "main" ]
   pull_request:
-    branches: 
-      -main
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: windows-latest
@@ -18,11 +16,13 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: |
-        dotnet add ShopApp/ShopsServer package AutoMapper --version 12.0.0
-        dotnet add ShopApp/ShopsServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.0
-        dotnet add ShopApp/ShopsServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13        
-        dotnet add ShopApp/ShopsServer package Microsoft.EntityFrameworkCore --version 6.0.15
-        dotnet add ShopApp/ShopsServer package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add TransportMgmt\TransportMgmtServer package AutoMapper --version 12.0.1
+        dotnet add TransportMgmt\TransportMgmtServer package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
+        dotnet add TransportMgmt\TransportMgmtServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.1
+        dotnet add TransportMgmt\TransportMgmtServer package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add TransportMgmt\TransportMgmtServer package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
+        dotnet add TransportMgmt\TransportMgmtServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13
+        dotnet add TransportMgmt\TransportMgmt.Domain package MySql.EntityFrameworkCore --version 7.0.2
     - name: Build with dotnet
       run: dotnet build TransportMgmt/TransportMgmtServer
     - name: Test with dotnet
