desktop application start

--- a/Factory/Factory/Factory.Server/Factory.Server.csproj
+++ b/Factory/Factory/Factory.Server/Factory.Server.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Factory.Domain\Factory.Model.csproj" />
+    <ProjectReference Include="..\Factory.Model\Factory.Model.csproj" />
   </ItemGroup>
 
 </Project>
