--- a/RentalService.Tests/RentalService.Tests.csproj
+++ b/RentalService.Tests/RentalService.Tests.csproj
@@ -33,6 +33,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="ReactiveUI.Fody" Version="18.4.44" />
         <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
         <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
