Добавлен вывод пассажиров, транспортных средств и их классификаций

--- a/TaxiApp/Taxi.Client/Taxi.Client.csproj
+++ b/TaxiApp/Taxi.Client/Taxi.Client.csproj
@@ -40,6 +40,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="ReactiveUI.Fody" Version="18.4.44" />
         <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
     </ItemGroup>
     
