--- a/TaxiApp/Taxi.Client/Taxi.Client.csproj
+++ b/TaxiApp/Taxi.Client/Taxi.Client.csproj
@@ -54,4 +54,10 @@
       </None>
     </ItemGroup>
     
+    <ItemGroup>
+      <Reference Include="Microsoft.EntityFrameworkCore">
+        <HintPath>..\..\..\..\.nuget\packages\microsoft.entityframeworkcore\7.0.2\lib\net6.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+    
 </Project>
