Перестроены модели классов. Добавлена модель класса, выступающая как связь между товарами и заказами. Исправлены тесты и данные в соответствии с новыми моделями. Подготовлены названия столбцов для БД. ProductController переписан под работсу с БД.

--- a/EnterpriseWarehouse/EnterpriseWarehouseServer/EnterpriseWarehouseServer.csproj
+++ b/EnterpriseWarehouse/EnterpriseWarehouseServer/EnterpriseWarehouseServer.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7427d6fa-2f51-4103-ab4a-b1a0dca5efa1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
