--- a/EnterpriseWarehouse/EnterpriseData/Enterprise.Data.csproj
+++ b/EnterpriseWarehouse/EnterpriseData/Enterprise.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
