Created a table of company requests Createad a table of employees Createad a table of job applications Changes in controllers: Now the correct id value is returned

--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
@@ -52,6 +52,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\JobApplicationWindow.axaml.cs">
+      <DependentUpon>JobApplicationWindow.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
