--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\TitleWindow.axaml.cs">
+      <DependentUpon>TitleWindow.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\JobApplicationWindow.axaml.cs">
       <DependentUpon>JobApplicationWindow.axaml</DependentUpon>
     </Compile>
