--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgency.Client.csproj
@@ -11,11 +11,6 @@
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
-    <None Remove="swagger.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="RecruitmentAgency.Client" ClassName="ApiClient" />
   </ItemGroup>
 
   <ItemGroup>
@@ -64,5 +59,6 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="swagger.json" ClassName="ApiClient" />
   </ItemGroup>
 </Project>
