--- a/PONRF/PonrfClient/PonrfClient.csproj
+++ b/PONRF/PonrfClient/PonrfClient.csproj
@@ -14,6 +14,8 @@
     <None Remove="Assets\Add.png" />
     <None Remove="Assets\Change.png" />
     <None Remove="Assets\Delete.png" />
+    <None Remove="Assets\logo2.png" />
+    <None Remove="Assets\logo3.png" />
     <None Remove="swagger.json" />
   </ItemGroup>
 
