--- a/ShopApp/ShopsClient/ShopsClient.csproj
+++ b/ShopApp/ShopsClient/ShopsClient.csproj
@@ -13,6 +13,7 @@
     <None Remove=".gitignore" />
     <None Remove="Assets\Post.png" />
     <None Remove="Assets\Put.png" />
+    <None Remove="Assets\Refresh.png" />
     <None Remove="Assets\Remove.png" />
     <None Remove="swagger.json" />
   </ItemGroup>
