--- a/FabricApp/Fabrics.Client/Fabrics.Client.csproj
+++ b/FabricApp/Fabrics.Client/Fabrics.Client.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
+    <Folder Include="Screenshots\" />
     <None Remove=".gitignore" />
     <None Remove="Assets\icon.ico" />
     <None Remove="Assets\task-add.png" />
