--- a/.github/workflows/still-learning-actions.yml
+++ b/.github/workflows/still-learning-actions.yml
@@ -1,24 +1,16 @@
 name: dotnet package
+run-name: ${{ github.actor }} is learning new in GitHub Actions
 
 on: [push]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        dotnet-version: [ '3.1.x', '6.0.x' ]
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-        uses: actions/setup-dotnet@v3
+      - uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ${{ matrix.dotnet-version }}
-      - name: Install dependencies
-        run: dotnet restore
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-      - name: Test
-        run: dotnet test --no-restore --verbosity normal
+          dotnet-version: '3.1.x'
+      - run: dotnet build <my project>
