--- a/.github/workflows/still-learning-actions.yml
+++ b/.github/workflows/still-learning-actions.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '3.1.x'
-      - run: dotnet build <my project>
+          dotnet-version: '6.0.x'
+      - run: dotnet build Department
