--- a/.github/workflows/DepartmentActions.yml
+++ b/.github/workflows/DepartmentActions.yml
@@ -17,13 +17,13 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: |
-        dotnet add Department\DepartmentServer package AutoMapper --version 12.0.1
-        dotnet add Department\DepartmentServer package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
-        dotnet add Department\DepartmentServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.1
-        dotnet add Department\DepartmentServer package Swashbuckle.AspNetCore --version 6.2.3
-        dotnet add Department\DepartmentServer package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
-        dotnet add Department\DepartmentServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13
-        dotnet add Department\DepartmentDomain package MySql.EntityFrameworkCore --version 7.0.2
+        dotnet add Department\Department.Server package AutoMapper --version 12.0.1
+        dotnet add Department\Department.Server package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
+        dotnet add Department\Department.Server package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.1
+        dotnet add Department\Department.Server package Swashbuckle.AspNetCore --version 6.2.3
+        dotnet add Department\Department.Server package Microsoft.EntityFrameworkCore.SqlServer --version 6.0.15
+        dotnet add Department\Department.Server package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13
+        dotnet add Department\Department.Server package MySql.EntityFrameworkCore --version 7.0.2
     - name: Build with dotnet
       run: dotnet build Department/DepartmentServer
     - name: Test with dotnet
