Added EmployeeVacationVoucher View

--- a/Organization/Organization.Client/Organization.Client.csproj
+++ b/Organization/Organization.Client/Organization.Client.csproj
@@ -48,8 +48,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\EmployeeVacationVoucherWindow.axaml.cs">
+      <DependentUpon>EmployeeVacationVoucherWindow.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\VacationVoucherTypeWindow.axaml" />
   </ItemGroup>
 </Project>
