--- a/Airline/Airline.Tests/Airline.Tests.csproj
+++ b/Airline/Airline.Tests/Airline.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Airline.Classes\Airline.Model.csproj" />
+    <ProjectReference Include="..\Airline.Model\Airline.Model.csproj" />
   </ItemGroup>
 
 </Project>
