--- a/Organization/Organization.Client/Organization.Client.csproj
+++ b/Organization/Organization.Client/Organization.Client.csproj
@@ -51,6 +51,9 @@
     <Compile Update="Views\EmployeeVacationVoucherWindow.axaml.cs">
       <DependentUpon>EmployeeVacationVoucherWindow.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\VacationVoucherWindow.axaml.cs">
+      <DependentUpon>VacationVoucherWindow.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\VoucherTypeWindow.axaml.cs">
       <DependentUpon>VoucherTypeWindow.axaml</DependentUpon>
     </Compile>
