a lot has changed...

--- a/Department/Department.Domain/Department.Domain.csproj
+++ b/Department/Department.Domain/Department.Domain.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
 </Project>
