--- a/CarApp/CarSharingClient/CarSharingClient.csproj
+++ b/CarApp/CarSharingClient/CarSharingClient.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
+    <Compile Remove="ApiClient.cs" />
     <None Remove=".gitignore" />
     <None Remove="swagger.json" />
   </ItemGroup>
